Add under construction sign + change scroll to 'auto' :cat:  :kissing_cat:

--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
             text-align: center;
             margin-left: 950px;
             height: 900px;
-            overflow: scroll;
+            overflow: auto;
         }
         p.poem {
             font: normal 18px Florence, cursive;
@@ -66,7 +66,7 @@
 
 <body>
     <div id="leftie"> <p>- News2Lyric -</p>
-        <p> <img width="150px" height="150px" src="static/under-construction.png" /></p>
+        <p> <img width="150px" height="150px" src="static/under_construction.png" /></p>
     </div>
     <h1 id="header" >Producing poems. Creativity can take a while...</h1>
     <div class="titles" >
