Change colour of logo :v:

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,10 +18,11 @@
 	        float: left;
 	        margin-left: 80px;
 	        margin-top: 60px;
-	        border: 3px solid #cc99ff;
+	        border: 3px solid #006666;
 	        background: url('static/texture3.jpg') no-repeat 0 0 transparent;
             background-size: cover;
-            color: #cc99ff;
+            color: #006666;
+            text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
             text-align: center;
             font: 40px fantasy;
             border-radius: 10px;
